objects/BMCServiceDesk__CMDB_log__c.object
<CustomObject>
    <description>Stores log details about the imported CMDB data.</description>
    <fields>
        <fullName>BMCServiceDesk__Class_Name__c</fullName>
        <formula>IF(!ISBLANK(BMCServiceDesk__FKBMC_BaseElement__c), BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__ClassName__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Element</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>CMDB logs</relationshipLabel>
        <relationshipName>CMDB_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_Editor_URL__c</fullName>
        <formula>IF(!ISBLANK(BMCServiceDesk__FKBMC_BaseElement__c), HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=Instance_Editor_URL&amp;recordId=&quot;+BMCServiceDesk__FKBMC_BaseElement__c+&quot;&amp;InstanceName=&quot;+BMCServiceDesk__FKBMC_BaseElement__r.Name,
&quot;&quot;+BMCServiceDesk__FKBMC_BaseElement__r.Name,&quot;_blank&quot;), &apos;&apos;)</formula>
        <label>Configuration Item / Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Log_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMC Discovery</fullName>
                </value>
                <value>
                    <fullName>Atrium</fullName>
                </value>
                <value>
                    <fullName>BBCA</fullName>
                </value>
                <value>
                    <fullName>BCM</fullName>
                </value>
                <value>
                    <fullName>Remedyforce Discovery</fullName>
                </value>
                <value>
                    <fullName>KACE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Remedyforce UI</fullName>
                </value>
                <value>
                    <fullName>SCCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reconciliation</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CMDB log</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Log_Date__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__Type__c</columns>
        <columns>BMCServiceDesk__Source__c</columns>
        <columns>BMCServiceDesk__Description__c</columns>
        <columns>BMCServiceDesk__FKBMC_BaseElement__c</columns>
        <columns>BMCServiceDesk__Class_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMDB logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>